############################################################################
# CMake
############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(11111111111)

############################################################################
# Catkin
############################################################################

find_package(catkin REQUIRED)
catkin_package()